---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: "String::from_utf8(buf).unwrap()"
---
Error: cannot continue outside of loop
   ╭─[<test>:1:1]
   │
 1 │ continue
   │ ────┬───  
   │     ╰───── invalid when there are no loop scopes
───╯

